# fastapi-cloud-observability

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: app.py  db.py  exceptions.py  main.py  service.py  telemetry.py
config/: grafana-datasource.yml  otel-collector-config.yaml
config/dashboards/: My Cloud App New-1705605565346.json
config/grafana-provisioning/datasources/: grafana-datasource.yml
